samples/echo-service/echo-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpecho-both
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          image: docker.io/jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
              protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpecho
spec:
  host: host.whatever.com
  to:
    kind: Service
    name: httpecho-both
    weight: 100
  port:
    targetPort: http-port
  wildcardPolicy: None
